# corba-c-bank

./: CMakeLists.txt  README.md
include/: bankC.h  bankC.inl
src/: BankClient.cpp  bankC.cpp
